# c2pa-testfile-maker

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  TESTING.md  generate_test_certs.sh
.cursor/rules/: rust-expert.mdc
.github/workflows/: ci.yml
examples/: README.md  asset_ref_manifest.json  asset_type_manifest.json  cloud_data_manifest.json  depthmap_gdepth_manifest.json  external_reference_manifest.json  full_manifest.json  simple_manifest.json  simple_with_ingredient.json  specVersion_manifest.json  with_ingredients.json  with_ingredients_from_files.json
src/: main.rs
tests/: README.md  integration_tests.rs  test_jpt_extraction.rs  test_validation.rs
testset/: C2PA-JPT Testfiles.xlsx  n-actions-created-gathered.json  n-actions-created-nodst.json  n-actions-inception-multiple.json  n-actions-inception.json  n-actions-opened.json  n-actions-placed-parent.json  n-actions-placed.json  n-actions-redacted-bad-reason.json  n-actions-redacted-bad-uri.json  n-actions-redacted-no-reason.json  n-actions-redacted.json  n-actions-removed-same-manifest.json  n-actions-removed.json  n-actions-softwareAgent-and-index.json  n-actions-translated.json  p-actions-created-gathered.json  p-actions-created.json  p-actions-opened-manifest.json  p-actions-opened-no-manifest-metadata.json  p-actions-opened-no-manifest.json  p-actions-placed-manifest-metadata.json  p-actions-placed.json  p-actions-redacted.json  p-actions-related.json  p-actions-template-all.json  p-actions-template.json  p-actions-translated.json
(+9 files in other folders)
